tests/Fixtures/views/errors/runtime_inline_include.tpl
<h1>Wrapper inline</h1>
{include file="errors/included_broken.tpl" inline}
<p>after</p>
